  * Added a new extension to speed up w-projection gridding
  * Merged the non-windowed and windowed functions in the lsl.correlator extensions to de-duplicate some of the codebase

1.2.2
  * Fixed a bug in setup.py that causes it to crash when 'pkg-config' is not installed
  * Fixed a memory leak in the new, more flexible lsl.reader modules

1.2.1
  * Added a new lsl.common.color module to help bring color to ANSI terminals
  * Small fix to lsl.imaging.utils.plotGriddedImage() to get the image scale correct for non-all-sky images
  * Finished moving imageIDI.py over to using the lsl.imaging modules
  * Changed the default FFT length in correlateTBN.py to 16 channels
  * Fixed a bug in lsl.common.sdf/sdfADP that caused parseSDF() to crash on SDFs generated by MCS when beam delays/gains were specified
  * Updated lsl.common.sdfADP to allow two beams at LWA-SV
  * Cleaned up a few messages in lsl.sim.vis and lsl.reader.ldp so that they use the warnings module
  * Made problems in lsl.statistics.robust raise ValueErrors if a problem is encountered
  * Added functions to lsl.common.adp to calculate the magnitude response of the TBN and DRX filters
  * Small fix to lsl.common.metabundle(ADP).getSessionMetaData() to make it more robust
  * Updated the lsl.skymap.SkyMapLFSM module to the 2018 April 23 version of the model
  * Added support for the UQR global ionospheric model to the lsl.misc.ionosphere module
  * Updated the lsl.reader.cor module to support what ADP at LWA-SV is currently capable of generating
  * Added OVRO-LWA as a valid station for a few of the LSL scripts that do not depend on detailed configuration information
  * Fixed a bug in lsl.common.metabundle*.getSessionMetaData() when parsing metadata from failed observations
  * Various performance enhancements to the C extentions in lsl.correlator
  * Updated the various lsl.reader extensions to use the read() method of the filehandle to make them more flexible